# market-pricing

./: .gitignore  Makefile  README.md  inspect_card.py  pytest.ini  test_avito_extraction.py  test_urls.py
backend/: .dockerignore  .env.example  Dockerfile  pkg_resources.py  pyproject.toml  requirements.txt
backend/apps/authentication/: authenticate.py  serializers.py  views.py
backend/apps/authentication/migrations/: 0001_initial.py
backend/apps/search/: analytics_urls.py  analytics_views.py  filters.py  models.py  price_alerts.py  serializers.py  tasks.py  urls.py  utils.py  views.py
backend/apps/search/migrations/: 0001_initial.py  0002_alter_rawprice_url.py  0003_rawprice_image_url.py  0004_pricealert.py  0005_pricealert_is_threshold_alert_pricethreshold.py
backend/apps/ws/: consumers.py  routing.py  utils.py
backend/config/: asgi.py  celery.py  urls.py
backend/config/settings/: __init__.py  base.py  prod.py  test.py
backend/mining/: clustering.py  pca.py  pipeline.py  preprocess.py  stats.py
backend/scraper/: aliexpress.py  avito.py  base.py  dispatcher.py  exchange_rate.py  jumia.py
backend/tests/unit/mining/: test_pca.py  test_preprocess.py
docker/: docker-compose.yml
docs/: price-alerts.md  product-intelligence.md
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
scraper/: middlewares.py  settings.py
scraper/spiders/: amazon.py  items.py
tests/fixtures/: jumia_results.html
tests/samples/: amazon_sample.html  avito_sample.html  (+1 more)
(+49 files in other folders)
